--- a/client/package.json
+++ b/client/package.json
@@ -27,21 +27,45 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "@progress/kendo-angular-buttons": "^5.0.0",
+    "@progress/kendo-angular-buttons": "5.0.0",
+    "@progress/kendo-angular-charts": "4.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
-    "@progress/kendo-angular-dateinputs": "^4.0.0",
-    "@progress/kendo-angular-dropdowns": "^4.0.0",
-    "@progress/kendo-angular-excel-export": "^3.0.0",
-    "@progress/kendo-angular-grid": "^3.14.4",
-    "@progress/kendo-angular-inputs": "^6.0.0",
-    "@progress/kendo-angular-intl": "^1.7.1",
-    "@progress/kendo-angular-l10n": "^1.4.1",
-    "@progress/kendo-angular-popup": "^2.5.0",
-    "@progress/kendo-data-query": "^1.5.1",
-    "@progress/kendo-drawing": "^1.5.12",
-    "@progress/kendo-theme-default": "latest",
+    "@progress/kendo-angular-conversational-ui": "2.0.0",
+    "@progress/kendo-angular-dateinputs": "4.0.0",
+    "@progress/kendo-angular-dialog": "4.0.0",
+    "@progress/kendo-angular-dropdowns": "4.0.0",
+    "@progress/kendo-angular-editor": "0.6.0",
+    "@progress/kendo-angular-excel-export": "2.4.0",
+    "@progress/kendo-angular-gauges": "3.0.0",
+    "@progress/kendo-angular-grid": "4.0.0",
+    "@progress/kendo-angular-inputs": "6.0.0",
+    "@progress/kendo-angular-intl": "2.0.0",
+    "@progress/kendo-angular-l10n": "2.0.0",
+    "@progress/kendo-angular-label": "2.0.0",
+    "@progress/kendo-angular-layout": "4.0.0",
+    "@progress/kendo-angular-menu": "2.0.0",
+    "@progress/kendo-angular-notification": "2.0.0",
+    "@progress/kendo-angular-pdf-export": "2.0.0",
+    "@progress/kendo-angular-popup": "3.0.0",
+    "@progress/kendo-angular-resize-sensor": "3.2.0",
+    "@progress/kendo-angular-ripple": "2.0.0",
+    "@progress/kendo-angular-scheduler": "0.14.0",
+    "@progress/kendo-angular-scrollview": "3.0.0",
+    "@progress/kendo-angular-sortable": "3.0.0",
+    "@progress/kendo-angular-toolbar": "2.0.0",
+    "@progress/kendo-angular-tooltip": "2.0.0",
+    "@progress/kendo-angular-treeview": "4.0.0",
+    "@progress/kendo-angular-upload": "5.0.0",
+    "@progress/kendo-charts": "1.13.0",
+    "@progress/kendo-data-query": "1.5.1",
+    "@progress/kendo-date-math": "1.4.1",
+    "@progress/kendo-drawing": "1.5.12",
+    "@progress/kendo-file-saver": "1.0.7",
+    "@progress/kendo-recurrence": "1.0.0",
+    "@telerik/kendo-intl": "2.0.0",
     "angular-debounce": "^1.1.0",
     "com-badrit-base64": "^0.2.0",
+    "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-android-fingerprint-auth": "1.5.0",
     "core-js": "^2.5.4",
@@ -99,7 +123,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
